<resources>
    <string name="app_name">Si Rawuh</string>
    <string name="message_unauthorized">Akses Anda sudah berakhir. Silakan Login kembali</string>
    <string name="page_not_found">Halaman tidak ditemukan</string>
    <string name="nipnis_invalid">NIP/NIS tidak boleh kosong</string>
    <string name="error_list_informasi">Informasi kelas belum ditambahkan. Silahkan tambah papan informasi kelas.</string>
    <string name="field_empty">Tidak boleh kosong.</string>
    <string name="label_yes">Ya</string>
    <string name="label_no">Tidak</string>
    <string name="label_button_edit">Ubah</string>
    <string name="label_button_delete">Hapus</string>
    <string name="label_desc_delete">Apakah anda yakin akan menghapus ini?</string>
    <string name="label_title_error_added">Mohon Maaf</string>

    // Login
    <string name="title_login_akun">Selamat datang di halaman masuk Si Rawuh,\nsilahkan isi dengan Nomor Induk Siswa/Pegawai.</string>
    <string name="number_nis_nip">Nomor Induk Siswa/Pegawai</string>
    <string name="label_button_login">Masuk Akun</string>

    // Home
    <string name="label_home">Home</string>
    <string name="label_kelas">Kelas</string>
    <string name="title_welcome_home">Halo, Selamat Datang Kembali</string>
    <string name="title_papan_informasi_home">Papan Informasi</string>
    <string name="label_see_detail">Lihat Detail</string>

    // Kelas
    <string name="title_nama_kelas">Kelas IX E</string>
    <string name="title_nama_guru">Wali Kelas: Kwartanti Fajriatin, M.Pd</string>
    <string name="label_informasi_kelas">Informasi Kelas</string>
    <string name="label_haidsiswa_kelas">Haid</string>
    <string name="label_kehadiran_kelas">Kehadiran</string>
    <string name="label_piket_kelas">Piket</string>
    <string name="label_kas_kelas">Kas</string>
    <string name="title_create_informasi_kelas">Buat Informasi</string>
    <string name="title_tambah_kehadiran">Tambah Kehadiran</string>
    <string name="title_tambah_haidsiswa">Tambah Informasi Haid</string>
    <string name="title_tambah_piketkelas">Tambah Informasi Piket</string>
    <string name="title_tambah_kaskelas">Tambah Informasi Kas</string>

    // Profile
    <string name="label_logout">Keluar Akun</string>,
    <string name="title_profile">Profil</string>

    <string name="route_home_host">route home host</string>

    // Buat Informasi
    <string name="title_judul_informasi">Judul Informasi</string>
    <string name="title_deskripsi_informasi">Deskripsi Informasi</string>
    <string name="title_media_informasi">Media Informasi</string>
    <string name="title_tambah_informasi">Tambah Informasi</string>
    <string name="title_ubah_informasi">Ubah Informasi</string>

    // Tambah Kehadiran
    <string name="title_status_kehadiran">Status Kehadiran</string>
    <string name="title_foto_kehadiran">Foto Bukti</string>

    // Tambah Haid Siswa
    <string name="title_pilih_tanggal_haid">Pilih Tanggal Mulai Haid</string>

    // Tambah Piket Kelas
    <string name="title_pilih_tanggal_piketkelas">Pilih Tanggal Piket</string>
    <string name="title_foto_piketkelas">Foto Bukti Piket</string>

    // Tambah Kas Kelas
    <string name="title_pilih_tanggal_bayarkas">Tanggal Bayar Kas</string>

    // Kehadiran
    <string name="label_status_kehadiran_item">Status</string>
    <string name="label_tanggal_kehadiran_item">Tanggal</string>
    <string name="label_foto_kehadiran_item">Foto</string>

    // Haid Siswa
    <string name="label_namasiswa_haid_item">Nama Siswa</string>
    <string name="label_tanggal_haid_item">Tanggal Haid</string>

    // Kas Kelas
    <string name="label_namasiswa_kas_item">Nama Siswa</string>
    <string name="label_tanggal_bayarkas_item">Tanggal Bayar Kas</string>
</resources>