<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/containerLogin">

    <ImageView
        android:layout_width="@dimen/_128sdp"
        android:layout_height="@dimen/_128sdp"
        android:src="@drawable/logo_512"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_akun"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_nis_nip"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfNisLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/textColorSecondary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.sirawuh.core.customview.BebasAsaButtonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/label_button_login"
        android:textSize="@dimen/_11ssp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"/>
</LinearLayout>