<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/containerUbahInformasi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"
            android:id="@+id/toolbarUbahInformasi"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_judul_informasi"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfJudulInformasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/textColorSecondary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_deskripsi_informasi"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfDeskripsiInformasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/textColorSecondary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_outlined_gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_15sdp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvUploadMediaInformasi"
                android:text="@string/title_media_informasi"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/textColorSecondary"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="@dimen/_44sdp"
                android:layout_height="@dimen/_44sdp"
                android:src="@drawable/ic_upload"/>
        </LinearLayout>

        <com.bebasasa.core.customview.BebasAsaButtonView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnUbahInformasi"
            android:text="@string/label_button_edit"
            android:textSize="@dimen/_11ssp"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"/>
    </LinearLayout>
</ScrollView>