<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/containerTambahPiketKelas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"
            android:id="@+id/toolbarTambahPiketKelas"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_outlined_gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:padding="@dimen/_10sdp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvPilihTanggalPiket"
                android:text="@string/title_pilih_tanggal_piketkelas"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/textColorSecondary"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_kalendar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_outlined_gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_15sdp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvUploadBuktiPiket"
                android:text="@string/title_foto_piketkelas"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/textColorSecondary"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="@dimen/_44sdp"
                android:layout_height="@dimen/_44sdp"
                android:src="@drawable/ic_upload"/>
        </LinearLayout>

        <com.sirawuh.core.customview.BebasAsaButtonView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnTambahPiketKelasSiswa"
            android:text="@string/title_tambah_piketkelas"
            android:textSize="@dimen/_11ssp"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"/>
    </LinearLayout>
</ScrollView>