<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbarprofile"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_outlined_gray"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/bg_oval_red"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvInitialNameProfile"
                    tools:text="A"
                    android:textSize="20sp"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFullnameProfile"
                    tools:text="John Kei"
                    android:textSize="16sp"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvNisnip"
                    tools:text="0909898983432312"
                    android:textSize="12sp"
                    android:textColor="@color/textColorSecondary"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_outlined_gray"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_kelas"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_nama_kelas"
                    android:textSize="12sp"
                    android:textColor="@color/textColorPrimary"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_teacher"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_nama_guru"
                    android:textSize="12sp"
                    android:textColor="@color/textColorPrimary"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <com.bebasasa.core.customview.BebasAsaButtonView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogout"
            android:text="@string/label_logout"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/bg_button_outlined_red"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="15dp"/>
    </LinearLayout>
</LinearLayout>